--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ahmed Abdullatif
-logo: /assets/img/LinkedIn Picture.jpg
+logo: /assets/img/headshot_img.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
